<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/shopFragment"
            android:icon="@drawable/ic_action_shop"
            android:title="@string/menu_shop" />

        <item
            android:id="@+id/categoryFragment"
            android:icon="@drawable/ic_action_category"
            android:title="@string/menu_category" />

        <item
            android:id="@+id/searchFragment"
            android:icon="@drawable/ic_action_search"
            android:title="@string/menu_search" />

        <item
            android:id="@+id/cartFragment"
            android:icon="@drawable/ic_action_cart"
            android:title="@string/menu_cart" />

    </group>

</menu>