<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/categoryFragment"
            android:icon="@drawable/ic_action_category"
            android:title="@string/menu_category" />

        <item
            android:id="@+id/myOrdersFragment"
            android:icon="@drawable/ic_action_myorders"
            android:title="@string/menu_myorders" />

        <item
            android:id="@+id/myProfileFragment"
            android:icon="@drawable/ic_action_profile"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_action_logout"
            android:title="@string/menu_logout" />

        <item
            android:id="@+id/login"
            android:icon="@drawable/ic_action_login"
            android:title="Login/Register" />

    </group>
</menu>